<resources>
    <string name="app_name">Get Set Travel</string>
    <string name="title_activity_map">Map</string>
    <string name="mobile">033 2228805 / 076 3754996</string>
    <string name="email">getsettravel@outlook.com</string>
    <string name="facebook">\@GetSetTravel</string>
    <string name="instagram">\@GetSetTravel</string>
    <string name="copyright">Get Set Travel©</string>
    <string name="title_activity_bookahotel">Book a Hotel</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_contactus">Contact us</string>
    <string name="title">\"Your traveling companion\"</string>
    <string name="bookingDetails">Booking Details</string>
    <string name="bookingCost">Cost of the booking</string>
    <string name="sendFeedback">Send us your feedback!</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_aboutus">About us</string>
    <string name="roomType">Room type</string>
    <string name="noRooms">No. of rooms</string>
    <string name="checkDate">Check-in date</string>
    <string name="checkTime">Check-in time</string>
    <string name="nights">No. of nights</string>
    <string name="button_priceCheck">Check the Price</string>
    <string name="activity_feedback_line1">Rate your experience with Get Set Travel.</string>
    <string name="activity_feedback_line2">We always want to improve. Do you have any suggestions?</string>
    <string name="submit">Submit</string>
    <string name="lookForAnotherHotel">Look for another hotel</string>
    <string name="confirmBooking">Confirm Booking</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="aboutUs_line">Our sole purpose here is to provide our users with best deals offered by luxurious hotels near famous travel destinations in Sri Lanka.</string>
    <string name="aboutUs_line2">This app was developed for the Mobile Application Development module project.</string>
    <string name="aboutUs_line3">SLIIT | FOC | Year 2.2 | Batch 7</string>
    <string name="aboutUs_line4">Team iOS</string>
    <string name="userAccount">My Account</string>
    <string name="Choose_the_province_you_want_to_travel">Choose the province you want to travel</string>
    <string name="radiobutton">RadioButton</string>
    <string name="eastern">Eastern</string>
    <string name="northern">Northern</string>
    <string name="north_central">North Central</string>
    <string name="north_western">North Western</string>
    <string name="western">Western</string>
    <string name="central">Central</string>
    <string name="Payment_Title">Payment Details</string>
    <string name="Card_Number">Card Number</string>
    <string name="Mm">MM</string>
    <string name="Yy">YY</string>
    <string name="Security_Number">Security Number</string>
    <string name="Card_holder">Cardholder Name</string>
    <string name="Button_Done">Done</string>

    <string name="Reset_Title">Reset your Password </string>
    <string name="Reset_User_name">User Name</string>
    <string name="New_Password">New Password</string>
    <string name="ReNew_Password">Change New Password</string>
    <string name="Button_Reset">Reset</string>

    <string name="Create_Account_Title">CREATE  ACCOUNT</string>
    <string name="User_Name">User Name</string>
    <string name="Email">Email Address</string>
    <string name="Password">Password</string>
    <string name="Repeat_Password">Repeat Password</string>
    <string name="Button_SignUp">Click To Sign Up</string>
    <string name="Login_Text">Already have an account?</string>
    <string name="Button_SignIn">Sign In</string>

    <string name="Account_User_Name">User Name</string>
    <string name="Value_User_Name">User1</string>
    <string name="Account_Email">Email</string>
    <string name="Value_Email">User1@gmail.com</string>
    <string name="Button_Edit_Password">Reset Password</string>
    <string name="Button_SignOut">Sign Out</string>

    <string name="Success_Title">Success</string>
    <string name="Success_Message">Your booking has sent for validation. You will be notified about the payment shortly.</string>
    <string name="Thank">Thank You!</string>
    <string name="Button_Back">Back To Home</string>
    <string name="Button_Add_Review">Add Reviews</string>
    <string name="btn_proceed">Proceed</string>
    <string name="channel_name">paymentSuccessful</string>
    <string name="channel_description">Your payment details are validated and the payment is successful. Thank you.</string>
    <string name="CHANNEL_ID">paymentConf</string>


    <array name="RoomTypes">
        <item>Single</item>
        <item>Double</item>
        <item>Family</item>
        <item>VIP Suite</item>
    </array>
    <array name="NoOfRooms">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </array>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="SendFeedback">Send us your feedback!</string>
    <string name="line1">Rate your experience with Get Set Travel</string>
    <string name="line2">We always want to improve. Do you have any suggestions?</string>

    <string name="Getsettravel">Get Set Travel</string>
    <string name="text">Promotion</string>
    <string name="t1">Promotion Code</string>
    <string name="t2">Promotion Type</string>
    <string name="t3">Offer</string>
    <string name="t4">Description</string>
    <string name="s1">SUBMIT</string>
    <string name="update">UPDATE</string>
    <string name="add">Add Promotion</string>
    <string name="mail">Email</string>


    <string name="Phone_Number">Phone Number</string>
    <string name="Address">Address</string>
    <string name="Update_User">Edit</string>
    <string name="Update_details">Update Details</string>
    <string name="Update">Update</string>
    <string name="btnDelete">Remove Account</string>

    <string name="login">Log In</string>
    <string name="loginPassword">Password</string>
    <string name="loginName">User Name</string>






    <string name="tittle1">ADD HOTEL</string>
    <string name="hotelName">Hotel Name</string>
    <string name="webSite">WebSite</string>
    <string name="location">Location</string>
    <string name="contactPersonName">Contact Person Name</string>
    <string name="mobileNo">Mobile No</string>
    <string name="budget">Budget</string>
    <string name="description">Description</string>
    <string name="addButton">ADD</string>
    <string name="name">Name</string>
    <string name="title2">Select Location</string>
    <string name="kandy">Kandy</string>
    <string name="anuradhapura">Anuradhapura</string>
    <string name="galle">Galle</string>
    <string name="trincomalee">Trincomalee</string>
    <string name="nuwaraeliya">Nuwara Eliya</string>
    <string name="addhotel">ADD Hotel</string>
    <string name="updatebutton">UPDATE Button</string>


    <string name="tit_Anu1">Hotel Heladiv</string>
    <string name="tx1">Avg. price/night:</string>
    <string name="tx2">LKR 5,105</string>
    <string name="btAnu1">check availability</string>
    <string name="tx3">One of our top picks in Anuradhapura.
Located in a lush green and serene environment, Hotel Heladiv is located 6 km away from the SLAF Anuradhapura Airport. Free WiFi access is available.</string>
    <string name="tit_Anu2">Aryana Boutique Hotel</string>
    <string name="tx4">LKR 13,871</string>
    <string name="btAnu2">check availability</string>
    <string name="tx5">Set in Anuradhapura, 6 km from Jaya Sri Maha Bodhi, Aryana Boutique Hotel offers accommodation with a restaurant, free private parking, an outdoor swimming pool and a shared lounge. Great choices for breakfast. Their Eggs Benedict was very tasty and served with fresh fruit</string>

    <string name="tit_Kandy1">Earls Regent Hotel</string>
    <string name="tx6">LKR 19,871</string>
    <string name="btKandy1">check availability</string>
    <string name="tx7">Set in Kandy, 2.4 km from Sri Dalada Maligawa, Serene Kandy provides accommodation with a rooftop pool. The hotel offers a European restaurant and a bar.
Last booked 3 hours ago</string>
    <string name="tit_Kandy2">Serene Kandy</string>
    <string name="tx8">LKR 15,871</string>
    <string name="btKandy2">check availability</string>
    <string name="tx9">Located in Kandy, 1.5 km from Sri Dalada Maligawa, Mount Blue Kandy provides accommodation with a restaurant, free private parking, an outdoor swimming pool and a garden.</string>

    <string name="tit_galle1">CozyNest</string>
    <string name="tx10">LKR 11,871</string>
    <string name="btGalle1">check availability</string>
    <string name="tx11">CozyNest is a villa situated in Galle, 700 metres from Galle International Cricket Stadium. The villa is 1 km from Galle Fort.</string>
    <string name="tit_galle2">Villa Olu</string>
    <string name="tx12">LKR 12,871</string>
    <string name="btGalle2">check availability</string>
    <string name="tx13">Featuring pool views, Villa Olu offers accommodation with an outdoor swimming pool, a fitness centre and a bar, around 9 km from Galle International Cricket Stadium.</string>

    <string name="tit_trinco1">Anantamaa Hotel</string>
    <string name="tx14">LKR 13,000</string>
    <string name="btTrinco1">check availability</string>
    <string name="tx1151">Anantamaa Hotel is tucked away in Trincomalee just steps away from the beach. Enjoy soothing spa treatments at the wellness centre or spend a quiet afternoon relaxing by the outdoor pool.</string>
    <string name="tit_trinco2">Amalya Hotel</string>
    <string name="tx15">LKR 12,500</string>
    <string name="btTrinco2">check availability</string>
    <string name="tx16">Anantamaa Hotel is tucked away in Trincomalee just steps away from the beach. Enjoy soothing spa treatments at the wellness centre or spend a quiet afternoon relaxing by the outdoor pool.</string>

    <string name="tit_nuwaraeli1">Galway Heights Hotel</string>
    <string name="tx17">LKR 12,871</string>
    <string name="btNuwareliya1">check availability</string>
    <string name="tx18">Set in Nuwara Eliya, 2.5 km from Gregory Lake, Galway Heights Hotel offers accommodation with a restaurant, free private parking, free bikes and a bar.</string>
    <string name="tit_nuwaraeli2">Grand Camellia Hotel</string>
    <string name="tx19">LKR 12,871</string>
    <string name="btNuwareliya2">check availability</string>
    <string name="tx20">Featuring a terrace and views of lake, Grand Camellia Hotel is set in Nuwara Eliya, 1.7 km from Gregory Lake.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>