<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".KandyHotel">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="225dp"
        android:layout_height="137dp"
        app:srcCompat="@drawable/kandy1" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="144dp"
        android:layout_height="87dp"
        android:text="@string/tit_Kandy1"
        android:textColor="#151515"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx7"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btKandy1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@string/btKandy1"
        android:text="@string/btKandy1" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="244dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/kandy2" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:text="@string/tit_Kandy2"
        android:textColor="#070707"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx1" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx9"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btKandy2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@string/btKandy2"
        android:text="@string/btKandy2" />




</LinearLayout>